--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ scipy>=0.15.1
 scikit-learn>=0.18
 matplotlib>=1.4.3
 pandas>=0.19
-
+opencv-python==4.1.2.30
+imutils>=0.5.3
+scikit-image>=0.14.0
+pytesseract
